# comea

./: .gitignore  Makefile  README.md  comea-progress-vs-prd.html  docker-compose.yml  planned.md  pyproject.toml
.claude/: settings.json
comea/: README.md  pubspec.yaml
comea/lib/: main.dart
comea/linux/: CMakeLists.txt
comea/web/: index.html  manifest.json
comea/windows/: CMakeLists.txt
comea_backend/: ai_client.py  auth.py  comment_style.py  conftest.py  database.py  debate.py  elastic_limit.py  factions.py  grader.py  main.py  persona_evolution.py  personas.py  population_batch.py  schemas.py
comea_backend/migrations/: 001_add_is_locked_and_reactions.sql  005_stage2_faction.sql  README.md
comea_backend/tests/: conftest.py  test_ai_client.py  test_api_stage2.py  test_auth.py  test_auth_api.py  test_comment_reaction.py  test_comment_style.py  test_debate.py  test_elastic_limit.py  test_factions.py  test_grader.py  test_persona.py  test_persona_deployment_signup.py  test_persona_evolution.py  test_persona_signup.py  test_population.py  test_reaction_api.py  test_schema_stage2.py  test_smoke.py  test_user_schema.py
docs/: stage2-backend-spec.md
docs/architecture/: user-ai-persona-north-star.md
scripts/: dev.sh
ulssu/: README.md  pubspec.yaml
ulssu/lib/: main.dart
ulssu/linux/: CMakeLists.txt
ulssu/test/: widget_test.dart
ulssu/web/: index.html  manifest.json
ulssu/windows/: CMakeLists.txt
ulssu_backend/: auth.py  comment_style.py  conftest.py  database.py  main.py  persona_deployment.py  personas.py  population.py  population_batch.py
(+104 files in other folders)
